# pydefine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_safe_run.py  example_usage.py
pydecode/: __init__.py  core.py  mapping.py
pydefine/: __init__.py  cli.py  core.py  i18n.py  mapping.py  utils.py  version.py
tests/: test_core.py  test_mapping.py
